--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "dependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/mongodb": "^4.0.7",
     "@types/pg": "^8.10.2",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "mongodb": "^5.6.0",
     "pg": "^8.11.1"
   },
   "devDependencies": {
